; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_stemmer.c_my_lc_str.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_stemmer.c_my_lc_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@use_stemmer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @my_lc_str(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i32, i32* @use_stemmer, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* %7, align 4
  %16 = icmp slt i32 %15, 3
  br i1 %16, label %17, label %23

17:                                               ; preds = %14, %3
  %18 = load i8*, i8** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @lc_str(i8* %18, i8* %19, i32 %20)
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %4, align 4
  br label %127

23:                                               ; preds = %14
  %24 = load i8*, i8** %6, align 8
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @get_str_class(i8* %24, i32 %25)
  store i32 %26, i32* %9, align 4
  %27 = load i32, i32* %9, align 4
  %28 = and i32 %27, 12
  %29 = icmp eq i32 %28, 12
  br i1 %29, label %30, label %69

30:                                               ; preds = %23
  %31 = load i8*, i8** %6, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @stem_rus_win1251(i8* %31, i32 %32, i32* %10)
  store i32 %33, i32* %8, align 4
  %34 = load i32, i32* %8, align 4
  %35 = icmp sgt i32 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %30
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* %7, align 4
  %39 = icmp sle i32 %37, %38
  br label %40

40:                                               ; preds = %36, %30
  %41 = phi i1 [ false, %30 ], [ %39, %36 ]
  %42 = zext i1 %41 to i32
  %43 = call i32 @assert(i32 %42)
  %44 = load i8*, i8** %5, align 8
  %45 = load i8*, i8** %6, align 8
  %46 = load i32, i32* %8, align 4
  %47 = call i32 @lc_str(i8* %44, i8* %45, i32 %46)
  %48 = load i32, i32* %10, align 4
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %50, label %67

50:                                               ; preds = %40
  %51 = load i32, i32* %8, align 4
  %52 = icmp sge i32 %51, 2
  %53 = zext i1 %52 to i32
  %54 = call i32 @assert(i32 %53)
  %55 = load i32, i32* %8, align 4
  %56 = add nsw i32 %55, -1
  store i32 %56, i32* %8, align 4
  %57 = load i8*, i8** %5, align 8
  %58 = load i32, i32* %8, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i8, i8* %57, i64 %59
  %61 = load i8, i8* %60, align 1
  %62 = load i8*, i8** %5, align 8
  %63 = load i32, i32* %8, align 4
  %64 = sub nsw i32 %63, 1
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i8, i8* %62, i64 %65
  store i8 %61, i8* %66, align 1
  br label %67

67:                                               ; preds = %50, %40
  %68 = load i32, i32* %8, align 4
  store i32 %68, i32* %4, align 4
  br label %127

69:                                               ; preds = %23
  %70 = load i32, i32* %9, align 4
  %71 = and i32 %70, 8
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %73, label %121

73:                                               ; preds = %69
  store i32 0, i32* %11, align 4
  br label %74

74:                                               ; preds = %88, %73
  %75 = load i32, i32* %11, align 4
  %76 = load i32, i32* %7, align 4
  %77 = icmp slt i32 %75, %76
  br i1 %77, label %78, label %91

78:                                               ; preds = %74
  %79 = load i8*, i8** %6, align 8
  %80 = load i32, i32* %11, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i8, i8* %79, i64 %81
  %83 = load i8, i8* %82, align 1
  %84 = sext i8 %83 to i32
  %85 = icmp slt i32 %84, 0
  br i1 %85, label %86, label %87

86:                                               ; preds = %78
  br label %91

87:                                               ; preds = %78
  br label %88

88:                                               ; preds = %87
  %89 = load i32, i32* %11, align 4
  %90 = add nsw i32 %89, 1
  store i32 %90, i32* %11, align 4
  br label %74

91:                                               ; preds = %86, %74
  %92 = load i32, i32* %11, align 4
  %93 = load i32, i32* %7, align 4
  %94 = icmp slt i32 %92, %93
  br i1 %94, label %95, label %101

95:                                               ; preds = %91
  %96 = load i8*, i8** %5, align 8
  %97 = load i8*, i8** %6, align 8
  %98 = load i32, i32* %7, align 4
  %99 = call i32 @lc_str(i8* %96, i8* %97, i32 %98)
  %100 = load i32, i32* %7, align 4
  store i32 %100, i32* %4, align 4
  br label %127

101:                                              ; preds = %91
  %102 = load i8*, i8** %6, align 8
  %103 = load i8*, i8** %5, align 8
  %104 = load i32, i32* %7, align 4
  %105 = call i32 @stem_eng(i8* %102, i8* %103, i32 %104)
  store i32 %105, i32* %8, align 4
  %106 = load i32, i32* %8, align 4
  %107 = icmp sgt i32 %106, 0
  br i1 %107, label %108, label %112

108:                                              ; preds = %101
  %109 = load i32, i32* %8, align 4
  %110 = load i32, i32* %7, align 4
  %111 = icmp sle i32 %109, %110
  br label %112

112:                                              ; preds = %108, %101
  %113 = phi i1 [ false, %101 ], [ %111, %108 ]
  %114 = zext i1 %113 to i32
  %115 = call i32 @assert(i32 %114)
  %116 = load i8*, i8** %5, align 8
  %117 = load i8*, i8** %5, align 8
  %118 = load i32, i32* %8, align 4
  %119 = call i32 @lc_str(i8* %116, i8* %117, i32 %118)
  %120 = load i32, i32* %8, align 4
  store i32 %120, i32* %4, align 4
  br label %127

121:                                              ; preds = %69
  %122 = load i8*, i8** %5, align 8
  %123 = load i8*, i8** %6, align 8
  %124 = load i32, i32* %7, align 4
  %125 = call i32 @lc_str(i8* %122, i8* %123, i32 %124)
  %126 = load i32, i32* %7, align 4
  store i32 %126, i32* %4, align 4
  br label %127

127:                                              ; preds = %121, %112, %95, %67, %17
  %128 = load i32, i32* %4, align 4
  ret i32 %128
}

declare dso_local i32 @lc_str(i8*, i8*, i32) #1

declare dso_local i32 @get_str_class(i8*, i32) #1

declare dso_local i32 @stem_rus_win1251(i8*, i32, i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @stem_eng(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
